--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -39,15 +39,15 @@ h1 {
   justify-content: space-between;
   align-items: center;
   background-color: black;
-  padding: 20px;
+  padding: 10px;
   color: white;
   height: 50px;
+  width: 100%;
 }
 
 .nav-logo {
   font-size: 1.5rem;
   font-weight: bold;
-  margin-right: 20px;
 }
 
 .nav-links {
@@ -68,6 +68,8 @@ h1 {
 
 .userLogged {
   padding: 10px;
+  font-size: 0.8rem;
+  margin-right: 10px;
 }
 
 
@@ -126,6 +128,7 @@ div > .listTopic {
   font-weight: bold;
   text-align: right;
   padding: 5px;
+  margin-right: 20px;
 }
 
 /*Componente Home*/
